PyMaker/datas/object2/RawHTML/i16701/Python_DOC_referPages.use-gist-to-get-financial-reports-from-google-finance.txt
<div class="post-text" itemprop="text">
<p>I would like to download financial reports from Google Finance and i have discovered this <a href="https://gist.github.com/knoguchi/6952087" rel="nofollow noreferrer">gist</a> and <a href="https://stackoverflow.com/questions/9740116/programmatic-access-to-detailed-historical-financial-data">from this SO answer</a>. However i am used to downloading a git repository go to the file <code>directory</code> where the downloaded git is and with the use of the <code>cmd</code> excecute the <code>setup.py</code> to setup and then use the git in my machine.</p>
<p>However once I download the gist i get</p>
<ul>
<li><code>pax_global_header</code></li>
<li>A <code>folder</code> named <code>gist6952087-f454536fdd54c47d42017aa1e9f286524b9bd9e8</code> which inside has a <code>gistfile1.txt</code></li>
</ul>
<p>How can i actually put this thing to work with my python from the <code>cmd</code>?</p>
<p><strong>EDIT</strong></p>
<pre><code>I have tried to do this:

C:\Users\Μαρίνος\Desktop\New folder\gist&gt;python gistfile1.py -h
  File "gistfile1.py", line 72
    except Exception, _:
                    ^
SyntaxError: invalid syntax
</code></pre>
<p>And it throws an error</p>
</div>
<div class="post-text" itemprop="text">
<p><code>gistfile1.txt</code> is the script; the gist author just didn't give it a name.</p>
<p>If you want, give it a name with a <code>.py</code> extension instead, and run the script with Python:</p>
<pre><code>python gistfile1.py -h
</code></pre>
<p>gives you the command-line help message.</p>
<p>Do make sure you have <a href="https://pypi.python.org/pypi/pyquery" rel="nofollow">pyquery</a> installed first.</p>
<p>The file is written for Python 2. If you have Python 3 installed, it is easy enough to have it converted:</p>
<pre><code>python3 -m lib2to3 -w gistfile1.py
</code></pre>
<p>This will replace the script with one that will work just fine on Python 3.</p>
</div>
<span class="comment-copy">@Codo: no, this is not a package. It's just <i>one script</i>.</span>
<span class="comment-copy">@Codo: it's a <i>Python 2</i> script. You are running it with Python 3.</span>
<span class="comment-copy">@Codo: you can, they can be installed side by side.</span>
<span class="comment-copy">@Codo: I tested using the Python 2-to-3 conversion tool, and it works fine for this script. Instructions added.</span>
<span class="comment-copy">For Windows, read the <a href="https://docs.python.org/3/using/windows.html" rel="nofollow noreferrer">Using Python on Windows</a> documentation, it'll tell you everything you need to know about running multiple versions of Python on a Windows machine, including picking what Python interpreter is used for what script.</span>
